Add support for P3 wide gamut colors

--- a/assets/css/media-queries/_width.scss
+++ b/assets/css/media-queries/_width.scss
@@ -21,6 +21,10 @@
 
     form {
       flex: 0;
+
+      input {
+        background-position-x: -4em;
+      }
     }
   }
 
@@ -177,6 +181,7 @@
     input {
       width: 100%;
       max-width: auto;
+      text-align: left;
     }
   }
 
