--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -35,18 +35,46 @@
   --accent-color: rgb(72, 72, 74);
 }
 
-$red: rgb(255, 59, 48);
-$orange: rgb(255, 149, 0);
-$yellow: rgb(255, 204, 0);
-$green: rgb(52, 199, 89);
-$teal: rgb(90, 200, 250);
-$blue: rgb(0, 122, 255);
-$indigo: rgb(88, 86, 214);
-$purple: rgb(175, 82, 222);
-$pink: rgb(255, 45, 85);
+@supports (color: color(display-p3 1 1 1)) {
+  :root {
+    --primary-background-color: color(display-p3 1 1 1);
+    --secondary-background-color: color(display-p3 0.949 0.949 0.9686);
+    --primary-text-color: color(display-p3 0.2117 0.2117 0.2196);
+    --secondary-text-color: color(display-p3 0.5568 0.5568 0.5764);
+    --accent-color: color(display-p3 0 0.4784 1);
+    --border-color: color(display-p3 0.898 0.898 0.9176);
+  }
 
-$white: white;
-$lightgray: rgb(242, 242, 247);
-$gray: rgb(72, 72, 74);
-$darkgray: rgb(54, 54, 56);
-$black: black;
+  .category-swift {
+    --accent-color: color(display-p3 1 0.2313 0.1882);
+  }
+
+  .category-clang {
+    --accent-color: color(display-p3 0 0.4431 0.6431);
+  }
+
+  .category-metal-opencl {
+    --accent-color: color(display-p3 0.1411 0.5411 0.2392);
+  }
+
+  .category-core-data {
+    --accent-color: color(display-p3 0.345 0.3372 0.8392);
+  }
+
+  .category-assets-resources {
+    --accent-color: color(display-p3 0.6862 0.3215 0.8705);
+  }
+
+  .category-interface-builder {
+    --accent-color: color(display-p3 1 0.5843 0);
+  }
+
+  .category-miscellaneous {
+    --accent-color: color(display-p3 0.2823 0.2823 0.2901);
+  }
+
+  nav a,
+  form input {
+    transition: none !important;
+  }
+}
