Link to stylesheet instead of inlining style element

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ site.title | escape }}</title>
     <meta name="description" content="{{ site.description | markdownify | strip_html }}"/>
     <meta name="revisit-after" content="1 month"/>
-    {% asset "main.css" @inline %}
+    {% asset "main.css" %}
 </head>
 <body>
     <header role="banner">
