Recalculate build settings count

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <form id="search" action="#">
         <input
           type="search"
-          placeholder="Search {{ site.data.build_settings_count }} build settings"
+          placeholder="Search {{ site.data.build_settings | size }} build settings"
         />
       </form>
     </header>
