--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -186,6 +186,54 @@ section {
   }
 }
 
+.build_setting {
+  table {
+    margin: 1em 0;
+    border-spacing: 1em 0;
+    width: 100%;
+    table-layout: fixed;
+
+    th,
+    td {
+      padding: 0.5em 0;
+    }
+
+    th {
+      text-align: right;
+      width: 10em;
+      border-right: 1px var(--border-color) solid;
+      padding-right: 1em;
+    }
+
+    td {
+      border-bottom: 1px var(--border-color) solid;
+      overflow-x: scroll;
+    }
+
+    tr:last-of-type td {
+      border-bottom: none;
+    }
+
+    td ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      li {
+        display: inline-block;
+        margin: 0;
+        &:after {
+          content: ", ";
+          margin-right: 0.5ch;
+        }
+
+        &:last-child:after {
+          content: "";
+        }
+      }
+    }
+  }
+}
+
 div.highlight {
   padding: 0 0.5em;
   border: 1px var(--border-color) solid;
