Fix size and position of search icon

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -67,8 +67,8 @@ body > header {
       background: transparent;
       background-image: asset_url("search.svg");
       background-repeat: no-repeat;
-      background-size: 50% 50%;
-      background-position-x: -3em;
+      background-size: 1em;
+      background-position-x: -0.5em;
       background-position-y: center;
       font-size: 1.25em;
       padding: 0.25em;
