Fix whitespace in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,12 +39,11 @@
           An
           <a href="https://nshipster.com/">NSHipster</a>
           project
-        </strong>
-        . Source code
+        </strong>.
+        Source code
         <a href="https://github.com/NSHipster/XcodeBuildSettings.com">
           available on GitHub
-        </a>
-        .
+        </a>.
       </p>
       <p>
         Last generated on
