Add links to download CSV and JSON

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,9 @@
         <a href="https://github.com/NSHipster/XcodeBuildSettings.com">
           available on GitHub
         </a>.
+        Download build settings as
+        <a href="/data/build_settings.csv" download>CSV</a> or
+        <a href="/data/build_settings.json" download>JSON</a>.
       </p>
       <p>
         Last generated on
