Prevent overflow of tables on mobile

--- a/assets/css/media-queries/_width.scss
+++ b/assets/css/media-queries/_width.scss
@@ -283,6 +283,8 @@
 
   .build_setting {
     table {
+      display: block;
+      overflow-x: scroll;
       table-layout: auto !important;
     }
   }
