Update URLs to download CSV and JSON

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
           available on GitHub
         </a>.
         Download build settings as
-        <a href="/data/build_settings.csv" download>CSV</a> or
-        <a href="/data/build_settings.json" download>JSON</a>.
+        <a href="/build_settings.csv" download>CSV</a> or
+        <a href="/build_settings.json" download>JSON</a>.
       </p>
       <p>
         Last generated on
